# kursova

./: CMakeLists.txt  addworker.cpp  addworker.h  addworker.ui  adminmainwindow.cpp  adminmainwindow.h  adminmainwindow.ui  adminwindow.cpp  adminwindow.h  adminwindow.ui  druk.cpp  druk.h  druk.ui  employee.cpp  employee.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  workermainwindow.cpp  workermainwindow.h  workermainwindow.ui  workerwindow.cpp  workerwindow.h  workerwindow.ui
